<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NewVision</string>
    <string name="unregist">（未注册）</string>
    <string name="registed">(已注册)</string>
    <string name="action_settings">设置</string>
    <string name="composition">命题作文</string>
    <string name="writingzone">写作园地</string>
    <string name="contacts">网络学伴</string>
    <string name="myDiary">观察日记</string>
    <string name="writeDiary">写日记</string>
    <string name="writeEssay">写随笔</string>
    <string name="writeComposition">写作文</string>
    <string name="essay">随笔</string>
    <string name="title">题目</string>
    <string name="keywords">标签</string>
    <string name="articleContent">正文</string>
    <string name="loginName">账号</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册账号</string>
	
    <string name="initError">初始化错误:</string>
    <string name="answerRong">问题回答错误</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="mail">邮箱</string>
    <string name="confirm">确认</string>
    <string name="verify">验证</string>
    <string name="update">修改</string>
    
    <string name="question">找回密码问题</string>
    <string name="answer">密码问题答案</string>
    <string name="updatePassword">密码修改成功</string>
	<string name="findPasswd">找回密码</string>
	<string name="PasswdPrompt">请输入密码</string>
	<string name="passwdVerify">两次输入的密码不一致</string>
	<string name="newPasswd">输入新密码</string>
	<string name="questionError">请输入密码问题</string>
	<string name="answerError">密码问题为空</string>
	
	<string name="AccountPrompt">请输入账号名</string>
	<string name="NoAccount">该账号不存在</string>
	<string name="emailError">电子邮件地址错误</string>
	<string name="regSucess">账号注册成功</string>
	<string name="hasUser">该账号已存在</string>
	<string name="verifyUser">账号或密码错误</string>
	
	<string name="Space1"> </string>
	<string name="Space2">  </string>
	<string name="Space3">   </string>
	<string name="Space4">    </string>

	
</resources>
